--- a/templates/main.html
+++ b/templates/main.html
@@ -8,9 +8,11 @@
     <div style="    width: 100%;text-align: center;font-size: 25px;font-style: unset;font-weight: 700;">
         <p>Drag image!</p>
     </div>
+
+    
     <div style="display: flex;">
         <div id = "target" class="content" style="margin-left: 20px;height: 500px;background: antiquewhite; width: 43%;" data-url="">
-            <i class="far fa-plus-square fa-5x" id="plus" style="text-align: center;margin-left: 44%;margin-top: 25%;"></i>
+            <i class="far fa-plus-square fa-5x" id="plus" style="text-align: center;margin-left:25%;margin-top: 25%;"></i>
         </div>
         <div style="width: 10%;    height: 100px;border: 1px solid grey;    margin-top: 10%;    margin-left: 2%;">
             <i class="fas fa-exchange-alt  fa-5x" style="text-align: center;    margin-top: 7%;padding-left: 39px;" onclick="parse()"> </i>
@@ -19,6 +21,7 @@
                 <img id ="result_img" src="" style="width: 100%;height: 100%">
         </div>
     </div>
+    
     <div id="divID" style="text-align: center;padding-top: 89px;"></div>
 </body>
 </html>
@@ -26,7 +29,7 @@
 <script src="https://code.jquery.com/jquery-latest.min.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 <style>
-    .content
+    .content{
         outline: 2px dashed #92b0b3 ;
         outline-offset:-10px;
         text-align: center;
@@ -82,6 +85,7 @@
         }
         if (files[0].type.match(/image.*/)) {
             console.log(files[0].name)
+            
             $(e.target).css({
                 "background-image": "url(" + window.URL.createObjectURL(files[0]) + ")",
                 "outline": "none",
